<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity"
    android:background="@android:color/white"
    android:orientation="vertical">


                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin"
                    android:id="@+id/detailToolbar"
                    app:title="@string/trackName"
                    android:background="@android:color/white"
                    android:layout_marginBottom="4dp"
                    android:elevation="4dp"
                    >
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addToCart"
        app:fabSize="mini"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_shopping_cart"/>
                </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:id="@+id/trackImage"
            android:scaleType="centerCrop"
            app:civ_border_width="4dp"
            android:layout_marginTop="16dp"
            app:civ_border_color="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/artwork"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trackName"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/black"
            android:id="@+id/trackNameCollapsing"
            android:layout_below="@id/trackImage"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/parentDetailLinearLayout"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/artistNameLabel"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:text="@string/artistName"
                    android:id="@id/artistName"
                    android:layout_marginStart="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/collectionNameLabel"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:text="@string/collectionName"
                    android:id="@+id/collectionName"
                    android:layout_marginStart="8dp"/>

            </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/primaryGenreNameLabel"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:text="@string/primaryGenreName"
                        android:id="@+id/primaryGenreName"
                        android:layout_marginStart="8dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/countryLabel"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:text="@string/country"
                            android:id="@+id/country"
                            android:layout_marginStart="8dp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/collectionCensoredNameLabel"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:text="@string/collectionCensoredName"
                        android:id="@+id/collectionCensored"
                        android:layout_marginStart="8dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/releaseDateLabel"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:text="@string/releaseDate"
                        android:id="@+id/releaseDate"
                        android:layout_marginStart="8dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/trackPriceLabel"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:text="@string/trackPrice"
                        android:id="@+id/trackPrice"
                        android:layout_marginStart="8dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:text="@string/currency"
                        android:layout_marginStart="2dp"
                        android:id="@+id/trackCurrency"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/collectionPriceLabel"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:text="@string/collectionPrice"
                        android:id="@+id/collectionPrice"
                        android:layout_marginStart="8dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:text="@string/currency"
                        android:layout_marginStart="2dp"
                        android:id="@+id/collectionCurrency"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/isStreamAbleLabel"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:text="@string/isStreamAbleYes"
                        android:id="@+id/isStreamAble"
                        android:layout_marginStart="8dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>



</LinearLayout>