<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@android:color/transparent"
    android:layout_margin="8dp"
    android:elevation="4dp"
    >


            <ImageView
                android:id="@+id/artworkImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/artwork"
                android:padding="4dp"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/trackName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/trackName"
                    android:layout_margin="2dp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="bottom"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/artistName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:textSize="12sp"
                    android:text="@string/artistName"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/black"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/trackTimeMillis"
                    android:text="@string/trackTimeMillis"
                    android:drawableStart="@drawable/ic_watch_later"
                    android:drawablePadding="8dp"
                    android:layout_margin="2dp"
                    />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginEnd="16dp">
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_play_arrow"
                android:id="@+id/playPreviewMusic"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/viewDetails"
                    android:text="@string/view_details"
                    android:textSize="14sp"
                    android:textColor="@color/colorAccent"/>
            </LinearLayout>


</LinearLayout>